k8s/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mediatracker
  namespace: mediatracker
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`$APP_HOST`)
      services:
         - name: app
           port: 80
